Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1769

OBD_FAIL_OST_DQACQ_NET is also needed by ofd

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • 3
    • 4473

      The OBD_FAIL_OST_DQACQ_NET fault injection added by http://review.whamcloud.com/1962 is also needed by ofd, so that ofd could pass replay-ost-single 8.

            mdiep Minh Diep - TLC
            liwei Li Wei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: