LU-1769 ofd: Add a fault injection for EINPROGRESS

Add OBD_FAIL_OST_DQACQ_NET case for fault injection
for EINPROGRESS

Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: I902a527af96af19b417e232d0e9d52c4b625e8eb
Reviewed-on: http://review.whamcloud.com/3763
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Li Wei <liwei@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>